@@ -74,6 +74,7 @@ export(LOGO.TOP.RIGHT)
 export(newCitation)
 export(newCustomReport)
 export(newFigure)
+export(newHtml)
 export(newJournalCitation)
 export(newList)
 export(newParagraph)
