@@ -1,11 +1,13 @@
-Release R1-1.1-0 / 8 January 2013
+Release R1-1.1-0 / ???
 
 - Added support for citation and inclusion of DOI information.
 
-- New report attribute "subtitle". A subtitle can be written/read using "set/getReportSubTitle().
+- New report attribute "subtitle". A subtitle can be written/read using "set/getReportSubTitle(..).
 
 - Logo section is no longer shown when no logos have been added to the report, effectively removing
   empty space above the title and below the meta data section.
+  
+- Nozzle now supports freeform HTML content with custom styles supplied through newHtml(...). 
 
 - Various fixes.
 
